--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="./src/css/pc.css">
+    <link rel="stylesheet" href="./src/css/mobile.css">
   </head>
   <body>
     <div id="mainContainer">
